# idjc-x

./: .gitignore  ChangeLog  Makefile.am  README  configure.ac  idjc.appdata.xml.in.in  idjc.in.in
c/: Makefile.am  avcodec_encoder.c  avcodec_encoder.h  avcodecdecode.c  avcodecdecode.h  encoder.c  encoder.h  flacdecode.c  live_webm_encoder.c  live_webm_encoder.h  main.c  mic.c  mic.h  mixer.c  mp3dec.c  oggdec.c  oggdec.h  recorder.c  sndfiledecode.c  sourceclient.c  streamer.c  streamer.h  xlplayer.c  xlplayer.h
docsrc/: Makefile  code_idjcmon.html_  install_build.html_  jingles-window.png_  main-window.png_  style.css  template_head.html__  tutorials.html_  tutorials_icecast.html_  tutorials_jack_ports_demystified.html_  tutorials_shoutcast.html_  tutorials_voip.html_
libshout-idjc/: .gitignore  INSTALL  Makefile.am  README  configure.ac  shout-idjc.pc.in
libshout-idjc/m4/: shout.m4
libshout-idjc/src/: Makefile.am  format_ogg.c  format_webm.c  proto_http.c  proto_icy.c  proto_roaraudio.c  proto_xaudiocast.c  queue.c  shout.c  shout_private.h  tls.c  util.c
man/fr/: Makefile.am  idjc-auto.1_  idjc-ls.1_  idjc-new.1_  idjc-noauto.1_  idjc-rm.1_  idjc-run.1_  idjc.1_  reporting_bugs.part
po/: LINGUAS  POTFILES.in  es.po  fr.po  it.po
python/: Makefile.am  __init__.py.in.in  dialogs.py  format.py  gtkstuff.py  idjcmonitor.py  irc.py  jingles.py  licence_window.py  maingui.py  midicontrols.py  mutagentagger.py  playergui.py  popupwindow.py  preferences.py  songdb.py  sourceclientgui.py  tooltips.py  utils.py
python/prelims/: __init__.py  profiledialog.py
(+6 files in other folders)
